--- a/src/app/include/nav/nav.component.html
+++ b/src/app/include/nav/nav.component.html
@@ -2,7 +2,7 @@
     <a class="navbar-brand" routerLink="/home">Home</a>
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/kho">Kho</a>
+        <a class="nav-link" routerLink="/add-user">Thêm người dùng</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/tóp">ABC</a>
