--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -1,45 +1,23 @@
 <div class="container">
     <div class="row">
         <div class="col-12">
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
-            <p>home works!</p>
+
+            <google-map height="500px" width="100%" [zoom]="zoom" [center]="center" [options]="options"
+                (mapClick)="click($event)">
+                <map-marker #markerElem *ngFor="let marker of markers" [position]="marker.position"
+                    [label]="marker.label" [title]="marker.title" [options]="marker.options"
+                    (mapClick)="openInfo(markerElem, marker.info)">
+                </map-marker>
+
+                <map-info-window>{{ infoContent }}</map-info-window>
+            </google-map>
+
+            <button (click)="zoomBase()">Reset zoom</button>
+            <button (click)="zoomIn()">Zoom in</button>
+            <button (click)="zoomOut()">Zoom out</button>
+            <button (click)="logCenter()">Log center</button>
+            <button (click)="addMarker()">Add marker</button>
+
         </div>
     </div>
 </div>
