--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -16,8 +16,11 @@
             <button (click)="zoomIn()">Zoom in</button>
             <button (click)="zoomOut()">Zoom out</button>
             <button (click)="logCenter()">Log center</button>
-            <button (click)="addMarker()">Add marker</button>
-
+            <!-- <button (click)="addMarker()">Add marker</button> -->
+        </div>
+        <div class="col-12">
+            <h3>Thông tin</h3>
+            <label for="">ABC: ....</label>
         </div>
     </div>
 </div>
