--- a/src/app/include/nav/nav.component.html
+++ b/src/app/include/nav/nav.component.html
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
-    <a class="navbar-brand" routerLink="/home">Home</a>
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/add-user">Thêm người dùng</a>
+  <a class="navbar-brand" routerLink="/home">Trang chủ</a>
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/home-list">Danh sách trại</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" routerLink="/add-home">Thêm trại</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/tóp">ABC</a>
-      </li>
-    </ul>
-  </nav>
+  </ul>
+</nav>
