--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -3,9 +3,12 @@
         <div class="col-lg-6">
             <h2 class="mt-4">Hệ thống quản lý bảo trợ xã hội</h2>
 
-            <label for=""><b>Home count: </b>{{homeCount || 0}}</label> 
+            <label for=""><b>Home count: </b>{{homeCount || 0}}</label> <br>
+            <label for=""><b>People count: </b>{{peopleCount || 0}}</label> 
+
         </div>
         <div class="col-lg-6">
+
         </div>
     </div>
 </div>
